# sieve-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  openapi-spec.yaml  pyproject.toml  server.json
src/sieve_mcp/: __init__.py  client.py  server.py
