[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sieve-mcp"
version = "0.1.0"
description = "MCP server for Sieve AI startup due diligence — screen startups with the IMPACT-X framework"
requires-python = ">=3.10"
dependencies = ["fastmcp>=2.0.0", "httpx>=0.27"]
readme = "README.md"
license = "MIT"
authors = [{name = "ArceusX Ventures", email = "hello@arceusxventures.com"}]
keywords = ["mcp", "ai", "due-diligence", "startup", "vc", "venture-capital", "sieve"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://sieve.arceusxventures.com"
Documentation = "https://github.com/arceusxventures/sieve-mcp"
Repository = "https://github.com/arceusxventures/sieve-mcp"
"Bug Tracker" = "https://github.com/arceusxventures/sieve-mcp/issues"

[project.scripts]
sieve-mcp = "sieve_mcp.server:main"
