[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sieve-mcp"
version = "0.1.3"
description = "From company name to investment decision. Sieve scores startups across 7 dimensions so you know who's worth a meeting."
requires-python = ">=3.10"
dependencies = ["fastmcp>=2.0.0", "httpx>=0.27"]
readme = "README.md"
license = "MIT"
authors = [{name = "ArceusX Ventures", email = "hello@arceusxventures.com"}]
keywords = ["mcp", "ai", "due-diligence", "startup", "vc", "venture-capital", "sieve"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://app.sieve.arceusxventures.com"
Documentation = "https://github.com/lmwharton/sieve-mcp"
Repository = "https://github.com/lmwharton/sieve-mcp"
"Bug Tracker" = "https://github.com/lmwharton/sieve-mcp/issues"

[project.scripts]
sieve-mcp = "sieve_mcp.server:main"
